Implement signature() for table type